# terrarium

./: .dockerignore  .gitignore  FEATURES.md  Makefile  README.md
.github/workflows/: api-audit.yaml  api-tonic-audit.yaml  api-tonic.yaml  api.yaml  audit-api-tonic.yaml  ci.yml  pr-api-tonic.yaml  rust.yaml
api/: Cargo.toml  build.rs  config.json
api-tonic/: Cargo.toml  Dockerfile  config.json
api-tonic/proto/: hello.proto
api-tonic/src/: server.rs
api/src/: server.rs
common_proto/: Cargo.toml  build.rs
common_proto/proto/: envelope.proto  hello.proto
common_proto/src/: lib.rs
consumer/: Cargo.toml  Dockerfile  config.json
consumer/src/: config.rs  db.rs  main.rs
local/: docker-compose.kafka.yaml  docker-compose.yaml  prometheus.yml
local/postgres/: init.sql
rust/: README.md
rust/api-tonic/: Cargo.toml  build.rs
rust/api-tonic/src/: server.rs
ui/: envoy.yaml  generate-grpc-web.sh  generate-proto.sh  package-lock.json  package.json  proto-gen.sh  vite.config.ts
ui/proto/: proto.pb
ui/src/: App.css  App.tsx
ui/src/components/HelloForm/: HelloForm.tsx
ui/src/components/MessageTimeline/: MessageTimeline.tsx
ui/src/services/grpc/: client.ts
ui/src/types/proto/: hello.ts  hello_pb.js
