[package]
name = "api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "helloworld-server"
path = "src/server.rs"

[dependencies]
tonic = "0.9"
tonic-reflection = "0.9.1"
prost = "0.11"
tokio = { version = "1", features = ["full"] }
rdkafka = { version = "0.29", features = ["cmake-build"] }
env_logger = "0.10.0"
log = "0.4.17"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
common_proto = { path = "../common_proto" }
chrono = "0.4"
uuid = { version = "1.3", features = ["v4"] }
