[package]
name = "consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
ctrlc = "3.4"
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
rdkafka = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.10"
